--- a/test/fixtures/bookings.yml
+++ b/test/fixtures/bookings.yml
@@ -1,9 +1,3 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
 one:
-  passenger: one
+  passenger: jonathan
   flight: one
-
-two:
-  passenger: two
-  flight: two
