--- a/test/fixtures/flights.yml
+++ b/test/fixtures/flights.yml
@@ -1,17 +1,7 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
 one:
-  departure_airport_id: 1
-  arrival_airport_id: 1
-  flight_number: 1
-  price: 1.5
-  arrival_date: 2017-10-20 23:47:16
-  departure_date: 2017-10-20 23:47:16
-
-two:
-  departure_airport_id: 1
-  arrival_airport_id: 1
-  flight_number: 1
-  price: 1.5
-  arrival_date: 2017-10-20 23:47:16
-  departure_date: 2017-10-20 23:47:16
+  departure_airport: one
+  arrival_airport: two
+  flight_number: <%= Faker::Number.number(3) %>
+  price: <%= Faker::Number.decimal(2) %>
+  arrival_date: <%= Faker::Time.between(3.days.from_now, 7.days.from_now) %>
+  departure_date: <%= Faker::Time.between(DateTime.now, 2.days.from_now) %>
