added last model association test

--- a/test/fixtures/passengers.yml
+++ b/test/fixtures/passengers.yml
@@ -1,3 +1,7 @@
 jonathan:
   name: "Jonathan Yiv"
   email: "JonathanYiv@gmail.com"
+
+joseph:
+  name: "Joseph Joewack"
+  email: "JosephJoewack@gmail.com"
